# coffee-shop-simulation

./: .gitignore  INSTRUCTIONS.MD  README.MD  main.cpp
.github/workflows/: cmake-multi-platform.yml
include/: Coffee.h  CoffeeFactory.h  CoffeeOrder.h  CoffeeShop.h  SmallCoffee.h
src/: Coffee.cpp  CoffeeFactory.cpp  CoffeeOrder.cpp  CoffeeShop.cpp  SmallCoffee.cpp
test/: CMakeLists.txt  test-coffee-order.cpp  test-coffee.cpp
